--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -48,13 +48,14 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 1px solid black;
+    border: 2px solid black;
     background-color: white;
-    opacity: 0.7;
+    opacity: 0.85;
     position: absolute;
 
     .title {
       font-weight: bold;
+      margin-top: 6px;
       margin-bottom: 6px;
       font-size: 22px;
       color: #4a4a4a;
